public API: Add a `/api/versions` endpoint
fixes #1089

This endpoint returns an array of the latest minor version for each
major version supported by the application.
